# rustchain

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
docker/demo/: Dockerfile  compose.yaml
src/: config.rs  consensus.rs  crypto.rs  lib.rs  logging.rs  main.rs  network.rs  peer.rs  peer_runtime.rs  server.rs  storage.rs  synchronization.rs  transactions.rs
src/consensus/: raft.rs  voting.rs
src/network/: discovery_client.rs  local_network.rs  mod.rs  network_constants.rs  rest_network.rs
src/peer/: action_executor.rs  consensus.rs  messages.rs
src/peer/consensus/: raft.rs  raft_log_store.rs  voting.rs
tests/: peer.rs  tests.rs
