[package]
name = "rustchain"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use glommio
derive_more = { version = "2.0.1", features = ["display", "from", "constructor"] }
k256 = { version = "0.14.0-pre.3", features = ["ecdsa", "serde"] }
regex = "1.11.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
rand = "0.9.1"
sorted-vec = "0.8.6"

axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
